--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     },
     "homepage": "https://github.com/ivanpalachuk/grupo_1_gamestore#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-validator": "^6.13.0",
         "method-override": "^3.0.0",
         "multer": "^1.4.4",
+        "mysql2": "^2.3.3",
         "nodemon": "^2.0.15"
     }
 }
