--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "homepage": "https://github.com/ivanpalachuk/grupo_1_gamestore#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "express-session": "^1.17.2",
         "express-validator": "^6.13.0",
         "method-override": "^3.0.0",
         "multer": "^1.4.4",
