--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "multer": "^1.4.3",
         "nodemon": "^2.0.15",
         "override": "0.0.1",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "mysql2": "^2.2.5",
+        "sequelize": "^6.5.0"
     }
 }
