--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
         "express-validator": "^6.14.0",
         "method-override": "^3.0.0",
         "multer": "^1.4.3",
+        "mysql2": "^2.2.5",
         "nodemon": "^2.0.15",
         "override": "0.0.1",
         "path": "^0.12.7",
-        "mysql2": "^2.2.5",
-        "sequelize": "^6.5.0"
+        "sequelize": "^6.13.0",
+        "sequelize-cli": "^6.4.1"
     }
 }
