--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "express-validator": "^6.14.0",
+        "i": "^0.3.7",
         "method-override": "^3.0.0",
         "multer": "^1.4.3",
         "mysql2": "^2.2.5",
@@ -32,6 +33,7 @@
         "override": "0.0.1",
         "path": "^0.12.7",
         "sequelize": "^6.13.0",
-        "sequelize-cli": "^6.4.1"
+        "sequelize-cli": "^6.4.1",
+        "validatorjs": "^3.22.1"
     }
 }
