--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "method-override": "^3.0.0",
         "multer": "^1.4.3",
         "mysql2": "^2.2.5",
+        "node-fetch": "^3.2.0",
         "nodemon": "^2.0.15",
         "override": "0.0.1",
         "path": "^0.12.7",
